--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod --base-href /my-litho/",
+    "deploy": "npm run build:prod && npm run deploy:ghpage",
+    "deploy:ci": "npm run build:prod && npm run deploy:ghpage:ci",
+    "deploy:ghpage": "npx ngh --dir www --name=$GH_USER --email=$GH_MAIL --no-silent",
+    "deploy:ghpage:ci": "npx ngh --dir www --name=$GH_USER --email=$GH_MAIL",
+    "http": "http-server ./www --cors -o",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,6 +26,8 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@capacitor/cli": "^1.1.1",
+    "@capacitor/core": "^1.1.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -42,6 +50,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular-cli-ghpages": "^0.6.0-rc.2",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
